# council

./: .env.backup  .env.commlink  .env.example  .env.swarm  .envrc  .envrc.template  .gitignore  .pre-commit-config.yaml  AGENT0_FRONT_SPEAKER_IMPLEMENTATION.md  AGENT_VOICES_STATUS.md  ALERT_TUNING_GUIDE.md  ANOMALY_INJECTOR_M310_BC140_COMPLETE.md  AUTONOMOUS_CONFIG.md  AUTONOMOUS_REALITY_CHECK.md  AutoGen Council Evolution Journey Frontend.md  BUILDER_LEDGER_v10.4.md  BUILD_STATUS.md  CHANGELOG.md  COMPLETE_STACK_SUMMARY.md  Content Swapping Guide.md  DAY2_OPERATIONS_SUMMARY.md  DAY_2_READINESS.md  DOCKER_STABILITY_SUMMARY.md  Dockerfile  Dockerfile.agent0  Dockerfile.canary  Dockerfile.commlink  Dockerfile.sandbox  Dockerfile.sciwave  Dockerfile.sws  Dockerfile.trainer  EMERGENCY_FIX_RESULTS.md  ENSEMBLE_DEPLOYMENT.md  ETA.txt  FINAL_PRODUCTION_STATUS.md  FUSION_OPTIMIZATION_RESULTS.md  GREETING_ELIMINATION_FINAL_SUMMARY.md  GREETING_STUB_DEBUG_SUMMARY.md  HASHLIB_FIX_SUMMARY.md  IDR-01_COMPLETION_REPORT.md  (+334 more)
action_handlers/: __init__.py  os_executor.py
admin/: index.html
agent0-ui/: package.json  tailwind.config.js
agent0-ui/src-tauri/: Cargo.toml  tauri.conf.json
agent0-ui/src-tauri/src/: main.rs
agents/: enabled.txt  planner.py  registry.yaml  researcher.py
api/: Dockerfile  app.py  memory_routes.py  metrics.py  openai_compat.py  requirements.txt  whiteboard.py
api_canary/: Dockerfile  app.py
app/: main.py
autogen_chat/: admin.html  index.html
autogen_council_frontend/: index.html
bench/: bench_single.py
builder/: builder.yml
cache/: shallow_cache.py
chat/: New Text Document.html
ci/: ci_gemini.yml
cli/: sws.py
common/: entity_enhancer.py  memory_manager.py  scratchpad.py  summarizer.py
compose/: ci-stack.yml  fresh-instance.yml
config/: adapter_weights.yaml  authz.yaml  council.yml  council_press_release_mode.yml  green_flip_alerts.yml  models.yaml  patchctl_meta.yml  providers.yaml  router.yml  router_config.yaml  settings.yaml  specialists.yaml  training.yml  utils.py  voting.yaml
configs/: commlink_thresholds.yaml  env_reference.md  env_reference_ci.md
conversations/: GEMINI.md  OPUS.md  echo_training.yaml  mybrotherinhissuit.txt  o3.md
council-2.4.0-prod/: PAIN_POINT.txt  comprehensive_test_results_1748992868.json  debug_model_loading.py  edge_smoke_tests.py  litmus_test_real_grading_20250603_202524.json  litmus_test_results_20250603_201609.json  litmus_with_guards.py  phi2_fixes.py  quick_autogen_gauntlet.py  quick_gauntlet_20250603_220607.json  simple_api_test.py  test_direct_generation.py  test_vllm_api.py  titanic_gauntlet_async_results_20250603_200302.json
cron/: nightly_improvement.sh  state_report.cron
css/: styles.css
data/: content.json  merged_prefs_20250605.jsonl  prefs_human.jsonl  prefs_synthetic.jsonl
datasets/: titanic_gauntlet_2025_06.jsonl
docs/: EXT-24A_DRILL_CARD.md  PR_U01_distill_integration.md  PR_U02_ticket_table.md  PR_U03_alert_toast.md  QA-300_IMPLEMENTATION.md  QA-301_IMPLEMENTATION_COMPLETE.md  QA-302_IMPLEMENTATION.md  SCIWAVE_README.md  SYSTEM_AUDIT_GUIDE.md  accuracy_policy.md  brand_style.md  builder2_mission_report.md  canary-web-suite-concept.md  compliance.md  cursor_agents.md  echo_agent_integration.md  ext24b_drill_ready.md  gauntlet_hook.md  glossary.md  grafana_snapshot.json  hardening_commit_summary.md  release_notes_v0.1.md  slack_integration.md  sunday_verification_integration.md  ui_audit_v0.1.md
eval/: retrieval_eval.py
examples/: meta_hash_sample.yaml
grafana/: trinity_health_dashboard.json
guide_loader/: main.py
infra/: CANARY_DEPLOYMENT.md  docker-compose.audit.yml  docker-compose.canary.yml  docker-compose.evolution.yml  docker-compose.pushgw.yml  docker-compose.yml
js/: app.js
ledger/: ledger.yaml
lineage/: push_lineage.sh
loader/: deterministic_loader.py
lora/: __init__.py  manager.py
lora_models/: config.yml
meta/: feedback_status.json
metrics/: fmc_gauges.py  lineage.prom  snapshot_prune.prom
middleware/: corr_id.py  sunday_verification.py
model_cache/: Local Mixtral (Transformers)_317bc255_compiled.pt  Local TinyLlama (Transformers)_50153057_compiled.pt
models/: exllama_patch.yaml
monitor/: index.html
monitoring/: alertmanager.yml  alerts.yml  alerts_simple.yml  api_alert.yml  api_alert.yml.backup  exporter.py  full-control-prometheus.yml  hardening_metrics.py  lineage_alerts.yml  production_metrics.py  prometheus.yml  roundtable.rules.yml  snapshot_alerts.yml  soak_alerts.yml  vram_alert.yml
nexus/: __init__.py  titanic_runner.py
nexus_jobs/: titanic_gauntlet.yaml
ops/: escalation_contacts.csv
outreach/: cloud_mentors.md
patchctl/: Dockerfile  app.py  config.audit.yml  config.yml
patterns/: learned_patterns.json  synthetic_specialists.py
preference_model/: dataset.py  train_reward.py
prometheus/: alert_rules.yml  prometheus.yml
prompts/: agent0_general.md  agent0_manifest.md  builder-tiny.md  code_specialist.md  council-api.md  first-mate.md  gemini.md  idr-01.md  knowledge_specialist.md  logic_specialist.md  lora-gauntlet.md  math_specialist.md  operational_rules.md  opus.md  pj-100-scanner.md  pj-110-interpreter.md  pj-120-historian.md  pj-130-privacy.md  pj-140-curator.md  pj-150-delivery.md  pj-160-therapist.md  pj-170-archivist.md  pj-180-outreach.md  router.md  sonnet-b.md  sonnet.md  system_intro.md
providers/: __init__.py  mistral_llm.py  openai_llm.py
reports/: accuracy_test_20250604_185856.json  accuracy_trend_analysis_20250604_190224.json  actionable_extraction.md  agent0_recovery_report.md  alerts.json  bandit.json  barrage_summary.md  builder2_demo_1749650384.json  (+24 more)
swarmAI-master/: Makefile.evolution  docker.env.evolution.template  init_leak_tests.ps1  knowledge_db.pkl  knowledge_index.faiss  overnight_check_simple.ps1  push_chat_integration.ps1  pyproject.toml  pytest.ini  requirements.txt  run_leak_tests_simple.ps1  test_air_gap_network_isolation.ps1
swarmAI-master/docker/: Dockerfile.scheduler
swarmAI-master/scripts/: auto_feeder_daemon.py
swarmAI-master/trainer/: trainer_worker.py
(+482 files in other folders)
